--- a/README
+++ b/README
@@ -1,20 +1,19 @@
-This is the text of ANSYS-Mode's README, the formatting is
-targeted for Oddmuse, Emacs Wiki's engine [http://www.emacswiki.org/emacs/AnsysMode EmacsWiki].
+This is the text of ANSYS-Mode's README, it is best read in Emacs's
+Org mode.
 
 Copyright (C) 2006 - 2014  H. Dieter Wilhelm, GPL V3
 
-Ansys-Mode since version 15.0.1 is hosted on [https://github.com]. The latest sources you'll find on the [https://github.com/dieter-wilhelm/ansys-mode ANSYS-Mode project site].
+** Introduction
+   
+Ansys-Mode since version 15.0.1 is hosted on [[https://github.com][Github]]. The latest
+sources you'll find on its [[https://github.com/dieter-wilhelm/ansys-mode][ANSYS-Mode]] project site.
 
-== Introduction ==
-
-http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/ansys+emacs.png
+# http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/ansys+emacs.png
 
 This project supports your workflows with the FEA (Finite Element
-Analysis) suite [http://www.ansys.com ANSYS] (ANalysis SYStem,
-registered TM).
+Analysis) suite [[http://www.ansys.com][ANSYS]] (ANalysis SYStem, registered TM).
 
-It provides `ANSYS-Mode', an add-on to the
-[http://www.gnu.org/software/emacs/ GNU Emacs editor] for
+It provides `ANSYS-Mode', an add-on to the [[http://www.gnu.org/software/emacs][GNU Emacs editor]] for
 investigating and coding APDL (Ansys Parametric Design Language).  The
 mode offers also managing and communication capabilities for various
 ANSYS processes, like interactive code debugging with the solver or
@@ -26,70 +25,72 @@ Advantages compared to other APDL editors: Largest feature set, user
 extensible, cost-free, Emacs integrated tools, available for all OS,
 for in-built help no ANSYS installation necessary.
 
-[http://www.gnu.org/home.en.html GNU (Gnu's Not Unix)] Emacs is an
-up-to-date, powerful and extensible - yet free - editor. High quality
-software available for every operating system where ANSYS is running.
+[[http://www.gnu.org/home.en.html][GNU]] (Gnu's Not Unix) Emacs is an up-to-date, powerful and extensible -
+yet free - editor. High quality software available for every operating
+system where ANSYS is running.
 
 The current stable version 16.1.1 of ANSYS-Mode is available at the
-[https://googledrive.com/host/0Bxnk08BGWfexUThqbWxLX1NyeTg Google Drive site] or in the
-command line way, e. g.: "wget
-http://ansys-mode.googlecode.com/files/ansys-mode-16.1.1.tgz").  The
-some code (completions, help strings etc.) is based on the latest
-ANSYS version.  Besides the mode and Emacs you will find also in the
-download section two tutorials.  For an immediate access have a look
-at the
+[[https://github.com/dieter-wilhelm/ansys-mode/releases][Github releases site]] 
+		     
+# or via command line way, e. g.: "wget
+# http://ansys-mode.googlecode.com/files/ansys-mode-16.1.1.tgz".
+
+The some code (completions, help strings etc.) is
+based on the latest ANSYS version.  Besides the sources and Emacs you
+will find also in the download section two tutorials.  For an
+immediate access have a look at the
 [http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/A-M_introductory_tutorial.html
-introductory on-line version], here you are able to see the images in
+introductory on-line version], here you are able to see the images in 
 a higher resolution as in the PDF version.  And in the
 [http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/A-M_in-depth_tutorial.html
 in-depth on-line tutorial] there is the source code highlighting
 better preserved as in its PDF version.
 
-Please report bugs and inconsistencies also in the documentation! Write
-an email to the [mailto:dieter@duenenhof-wilhelm.de maintainer] or use
-Google Code's [http://code.google.com/p/ansys-mode/issues/list issues list].
+Please report bugs and inconsistencies also in the documentation!
+Write an email to the [[mailto:dieter@duenenhof-wilhelm.de][maintainer]] or open a bug report in [[ ihttps://github.com/dieter-wilhelm/ansys-mode/issues][Github's
+issues list]].
 
-== Requirements ==
+** Requirements
 
-The mode was tested with Emacs-24.2 under XP64, Win7 and GNU/Linux64.
-It should also run with Emacs-23 and under respective 32 bit systems.
+The mode was tested with Emacs-24.5 under XP64, Win7 and GNU/Linux64.
+It should also run with Emacs-23 under respective 32 bit systems.
 
 Some of ANSYS-Mode's solver control and communication features are
 only implemented for GNU/Linux systems.
 
-== Features ==
+** Features
 
-* Command syntax help inbuilt in the mode (similar to but more verbose
+- Command syntax help inbuilt in the mode (similar to but more verbose
   then the ANSYS dynamic prompt), undocumented commands are hinted as
   such. (There is no need to have ANSYS installed for it to work.)
 
-* Opening the detailed ANSYS help in your web browser for an APDL
+- Opening the detailed ANSYS help in your web browser for an APDL
   command or element name (the element number is sufficient) at or
   before the cursor.  Optionally you can input the desired string
   interactively with a completion of all valid keywords.
 
-* ANSYS process management (viewing error files, license status,
+- ANSYS process management (viewing error files, license status,
   starting the ANSYS help browser, etc.).
 
-* Solver communication facilities, i. e. sending code fragments from
+- Solver communication facilities, i. e. sending code fragments from
   the macro file or commands interactively to an ANSYS solver process
   (GNU/Linux only).
 
-* Keyword completion of ANSYS commands, elements, get- and
+- Keyword completion of ANSYS commands, elements, get- and
   parametric-functions (case-sensitive) of around 2000 ANSYS symbols.
 
-* Comprehensive keyboard shortcuts for code navigation: Skipping
+- Comprehensive keyboard shortcuts for code navigation: Skipping
   comments, navigating number blocks, searching and creating *DO-,
   *IF-, *DOWHILE-, *CREATE-blocks, etc.
 
-* Warning of deprecated element types with a different highlighting of
+- Warning of deprecated element types with a different highlighting of
   element names in current and deprecated technology.
 
-* Syntax highlighting in various decoration levels (complete ANSYS
+- Syntax highlighting in various decoration levels (complete ANSYS
   keywords, undocumented commands, deprecated elements, ...)  and
   optionally also user defined variables (experimental feature).
 
-* Overview of *every* variable definition (*GET, *DIM, *SET, =, *DO,
+- Overview of *every* variable definition (*GET, *DIM, *SET, =, *DO,
   CM, *VGET, ...), as well as component names, in the current file.
   These are shown in another window.  In the highest decoration level
   (2) these `user variables' are dynamically highlighted as well.
@@ -97,46 +98,47 @@ only implemented for GNU/Linux systems.
   possible with a keyboard shortcut to query the current status of
   variables near the cursor.
 
-* Preview and/or insertion of extensible APDL code templates.  For
+- Preview and/or insertion of extensible APDL code templates.  For
   example the function template shows *all* available ANSYS
   parametric- and get functions. The respective code snippets show
   examples of APDL work flows and considerable ANSYS know-how, these
   are easily extensible to boot.  The templates are partly interactive
   i. e. they are asking for or completing user input.
 
-* Alignment (beautification) of whole paragraphs or marked sections
+- Alignment (beautification) of whole paragraphs or marked sections
   with variable definitions.
 
-* Narrowing, i. e. hiding, of uninteresting content. This is done by
+- Narrowing, i. e. hiding, of uninteresting content. This is done by
   default for number blocks (nblock, eblocks and cmblocks) in
   WorkBench created solver input file (with the suffix .dat).  You
   can, in case the need arises, unhide and inspect these as well.
 
-* Outlining (hiding and navigating) of code sections with Emacs'
+- Outlining (hiding and navigating) of code sections with Emacs'
   outline-minor-mode. With outline strings '!@' you have a heading
   structure which you can collapse or show.  This is the textual
   analog to the WorkBench tree view.
 
-* Auto-insertion (optionally) of a header and outline code for every
+- Auto-insertion (optionally) of a header and outline code for every
   new APDL file.
 
-* Convenient comment handling, commenting out whole paragraphs or
+- Convenient comment handling, commenting out whole paragraphs or
   whole control blocks and vice versa.
 
-* Auto-indentation of looping blocks and conditional control blocks
+- Auto-indentation of looping blocks and conditional control blocks
   together with closing of open blocks with auto-insertion of the
   appropriate end keyword (case-sensitive).
 
-* ANSYS-Mode defines abbreviations for APDL templates i. e. with
+- ANSYS-Mode defines abbreviations for APDL templates i. e. with
   writing a `nickname' after a special key triggers an exchange of the
   characters with a complete code template.
 
-* You are able to use all Emacs' facilities, like the built-in
+- You are able to use all Emacs' facilities, like the built-in
   calculator, file manager, image viewer and many others.  ANSYS-Mode
   changes some Emacs default behaviour to alleviate the transition
   from other editors and user interface standards.
 
-== Example applications ==
+
+** Example applications
 
 Visual examples you will find in the
 [http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/A-M_introductory_tutorial.html online tutorial]
@@ -152,50 +154,49 @@ activated. The smaller windows on the left hand side are showing the
 `Variable definitions buffer' of the same file and a preview buffer of
 a certain code template, respectively.
 
-== News ==
+** News
 
+Please have a look in the [[file:NEWS][NEWS]] file for the complete history
 
+** Installation
 
-Please have a look in the NEWS file for the complete history
+The version scheme is a mixture of the ANSYS release (currently
+"16.1") on which the highlighting and completing code is based and the
+version increments (currently ".1") of ANSYS-Mode (thus "16.1.1") for
+this particular ANSYS release.
 
-== Installation ==
-
-The version scheme is a mixture of the ANSYS release (currently 14.5)
-on which the highlighting and completing code is based and the version
-increments (currently .2) of ANSYS-Mode (thus 16.1.1) for this
-particular ANSYS release.
-
-=== Files ===
+*** Files
 
 Sources:
-* ansys-mode.el
-* ansys-keyword.el
-* ansys-template.el
-* ansys-process.el
+- ansys-mode.el
+- ansys-keyword.el
+- ansys-template.el
+- ansys-process.el
 
 (and possibly their compiled versions with the suffix '.elc'.  In case
 you are using the mode with an older version of Emacs than 24.1 please
 remove the .elc files.)
 
-Auxiliaries:
-* README -- This file
-* NEWS -- News and history
-* TODO -- Todos and deficiencies
-* LICENSE -- The GPL (Gnu Public License) Version 3
-* default_el -- Configuration example file of an Emacs 'default.el'
-* fontification.mac -- APDL example file
-* A-M_introductory_tutorial-16.1.1.pdf -- Your first look at ANSYS-Mode?
-* A-M_in-depth_tutorial-16.1.1.pdf -- A hands-on ANSYS-Mode tutorial
-* A-M_in-depth_tutorial-16.1.1.ansys -- Hands-on tutorial's supplementary APDL code
-* A-M_APDL_reference-16.1.1.pdf -- APDL and ANSYS-Mode syntax highlighting reference guide
+*Auxiliaries*:
+- README -- This file
+- NEWS -- News and history
+- TODO -- Todos and deficiencies
+- LICENSE -- The GPL (Gnu Public License) Version 3
+- default_el -- Configuration example file of an 'default.el' for
+  Emacs
+- fontification.mac -- APDL example file
+- A-M_introductory_tutorial-16.1.1.pdf -- Your first look at ANSYS-Mode?
+- A-M_in-depth_tutorial-16.1.1.pdf -- A hands-on ANSYS-Mode tutorial
+- A-M_in-depth_tutorial-16.1.1.ansys -- Hands-on tutorial's supplementary APDL code
+- A-M_APDL_reference-16.1.1.pdf -- APDL and ANSYS-Mode syntax highlighting reference guide
 
-=== Short instructions ===
+*** Short instructions
 
-__For Windows systems:__
+*For Windows systems*:
 
-If applicable please grab the package of a pre-compiled Emacs-24.1
+If applicable please grab the package of a pre-compiled Emacs-24.5
 (Win32/64) bundled with a preconfigured ANSYS-Mode (for Windows 64
-bit) at above Google Code site and unpack this archive anywhere on
+bit) at above Github site and unpack this archive anywhere on
 your system (you do not need administrator rights).  You might
 subsequently run the program addpm.exe (located in the bin directory)
 to add an Emacs entry to the Windows start menu (please refer to the
@@ -213,14 +214,13 @@ help browser directly from Emacs please adjust the configuration file
 `default.el' file in Emacs' `site-lisp' directory according to the
 commented code examples.
 
-In case you want to download or have already installed the
-[http://ftp.gnu.org/pub/gnu/emacs/ original version] of GNU Emacs, you
-can also download and configure the ANSYS-Mode package
-separately. Please see below.
+In case you want to download or have already installed the [[http://ftp.gnu.org/pub/gnu/emacs/][original
+version]] of GNU Emacs, you can also download and configure the
+ANSYS-Mode package separately. Please see below.
 
-__For existing Emacs installations on Windows and GNU/Linux:__
+*For existing Emacs installations on Windows and GNU/Linux*:
 
-==== Direct way; no file configuration necessary ====
+**** Direct way; no file configuration necessary
 
 Important prerequisite: Emacs must know where all the code (.el or its
 compiled versions .elc) files reside!  Extract the mode archive into
@@ -240,7 +240,7 @@ reasons - if the compiled version is available) and press RET to
 execute the loading.  Thereafter call the mode itself with `M-x
 ansys-mode RET' for every new or existing APDL file.
 
-==== More convenient way; file configuration necessary ====
+**** More convenient way; file configuration necessary
 
 Extract the files somewhere on disc and put the following paragraph
 into your `.emacs' configuration file (in your home directory), adjust
@@ -256,9 +256,9 @@ automatically applied for all files with suffixes `.mac', `.dat' and
     (add-to-list 'auto-mode-alist '("\\.inp\\'" . ansys-mode))
     (autoload 'ansys-mode "ansys-mode" nil t)
 
-=== Verbose instructions ===
+*** Verbose instructions
 
-* Direct way, no configuration necessary (loading `by hand')
+- Direct way, no configuration necessary (loading `by hand')
 
 Please consult the `direct way' description above.
 
@@ -268,7 +268,7 @@ the menu bar), it doesn't take too much time and the investment will
 be worth it since it will accelerate your general editing capabilities
 in the future.
 
-* Permanent configuration
+- Permanent configuration
 
 When it becomes tiring of loading 'ansys-mode.el' (or
 'ansys-mode.elc') every time you are starting a new Emacs session, you
@@ -283,7 +283,7 @@ home directory '~\').
 From here you are able to type "M-x ansys-mode RET" to activate the
 mode for every interesting file.
 
-* Automatic mode assignment
+- Automatic mode assignment
 
 When you intend to apply the mode automatically, for all files with
 the extensions `.mac', `.dat', `.inp' and `.anf' ( .dat and .inp are
@@ -301,7 +301,7 @@ which contains also an APDL header and footer.
 
      (add-to-list 'auto-mode-alist '("\\.anf$" . ansys-mode))
 
-* Auto-insertion of code
+- Auto-insertion of code
 
 In case you also want to enjoy the auto insertion feature, which puts
 (optionally) some predefined body of ANSYS commands to every new APDL
@@ -311,7 +311,7 @@ file insert the following into '.emacs':
      (setq auto-insert-query t) ;insert only after request
      (add-to-list 'auto-insert-alist '(ansys-mode . [ansys-skeleton-compilation]))
 
-* Auto-loading of helper functions
+- Auto-loading of helper functions
 
 With below section you are also able to use certain ANSYS related
 commands in a new Emacs session without the need of previously having
@@ -324,7 +324,7 @@ explicitly called ansys-mode.
      (autoload 'ansys-start-ansys "ansys-mode" "Activate the function for starting the APDL interpreter under GNU/Linux or product launcher under Windows." 'interactive)
      (autoload 'ansys-license-status "ansys-mode" "Activate the function for displaying ANSYS license status or starting a license utility." 'interactive)
 
-* A further configuration method
+- A further configuration method
 
 As a summary and example to these and further customisation options
 please have a look at the accompanying `default_el' example. This is
@@ -335,7 +335,7 @@ in the `EMACS_INSTALLDIR/site-lisp' directory and is therefore an
 alternative to customisations in `.emacs', your personal configuration
 file.
 
-== Usage and customisation ==
+** Usage and customisation
 
 When you have a file under `ansys-mode' check out the menu bar's
 `ANSYS' entry for its possibilities and select the entry `Describe
@@ -348,28 +348,28 @@ Templates, i.e. code snippets or so called skeletons might be extended
 in `ansys-template.el' and can be used similarly or complementarily to
 a classical ANSYS macro library.
 
-== Experienced Emacs users ==
+** Experienced Emacs users
 
 ANSYS-Mode changes the default behaviour of Emacs
 
 globally:
 
-* Switches on font-lock-mode if toggled off, e.g when calling Emacs with
+- Switches on font-lock-mode if toggled off, e.g when calling Emacs with
   the -D (basic display) option
-* Activated Delete Selection Mode (delete-selection-mode t)
-* Activated Show Paren Mode (show-paren-mode t)
-* Advised M-w (kill-ring-save) without active region to copy the whole line
+- Activated Delete Selection Mode (delete-selection-mode t)
+- Activated Show Paren Mode (show-paren-mode t)
+- Advised M-w (kill-ring-save) without active region to copy the whole line
 
 (Delete Selection Mode can be switched off in the ANSYS-Mode menu.)
 
 locally:
-* (setq scroll-preserve-screen-position t)
-* Changed M-h (mark-paragraph) to move the cursor to the end of the region
+- (setq scroll-preserve-screen-position t)
+- Changed M-h (mark-paragraph) to move the cursor to the end of the region
 
-== Acknowledgements ==
+** Acknowledgements
 
-* Tim Read
-* Geoff Foster
+- Tim Read
+- Geoff Foster
 
 For their ansys-mod.el from 1997 which triggered the idea in 2006 to
 start ANSYS-Mode as a GNU public license (GPL) implementation with an
@@ -377,36 +377,38 @@ extended feature set.
 
 Further acknowledgements in mainly reverse chronological order:
 
-* Nish Joseph
-* Alwin Perras
-* Mathias Dahl, for hide-region.el (and yupeng for some additions)
-* Thien-Thi Nguyen
-* Michael Kidner
-* Ilya Gurin
-* Alex Schroeder
-* Holger Sparr
-* Eli Zaretzki
-* Markus Triska
-* [http://stallman.org/ RMS] for Emacs
+- Mehmet Akgul
+- Nish Joseph
+- Alwin Perras
+- Mathias Dahl, for hide-region.el (and yupeng for some additions)
+- Thien-Thi Nguyen
+- Michael Kidner
+- Ilya Gurin
+- Alex Schroeder
+- Holger Sparr
+- Eli Zaretzki
+- Markus Triska
+- [[http://stallman.org][RMS]] (Richard Stallman) for GNU Emacs
 
-== Resources ==
+** Resources
 
-* The ANSYS-Mode atom feed for its downloads is
-  http://code.google.com/feeds/p/ansys-mode/downloads/basic
-* The [http://www.emacswiki.org Emacs Wiki]
-* A general [http://www.ansys.net  ANSYS repository] (ansys.net)
-* The [http://www.ansys.com ANSYS homepage]
-* Xansys, an [http://www.xansys.org ANSYS online community] (registration necessary for the forum)
-* [http://www.auc-ev.de/ AUC], the ANSYS User Club in Germany
-* A competitor of ANSYS-Mode: The commercial [http://www.padtinc.com/pedal  Pedal] script editor
-* Another free [http://apdl.de APDL editor], unfortunately this site seems to be abandoned since 2010
-* Simple APDL syntax highlighting is available for various editors, gvim, nedit, ... just to name a few,
-  please have a look at [http://ansys.net ANSYS.net].
+- The [[http://www.emacswiki.org][Emacs Wiki]]
+- A general  ANSYS repository [[http://www.ansys.net][ansys.net]]
+- The [[http://www.ansys.com][ANSYS homepage]]
+- Xansys, an [[http://www.xansys.org][ANSYS online community]] (registration necessary for the
+  forum)
+- [[http://www.auc-ev.de/][AUC]], the ANSYS User Club in Germany
+- A competitor of ANSYS-Mode: The commercial [[http://www.padtinc.com/pedal][Pedal]] script editor
+- Another free [[http://apdl.de][APDL editor]], unfortunately this site seems to be
+  abandoned since 2010
+- Simple APDL syntax highlighting is available for various editors,
+  gvim, nedit, ... just to name a few, please have a look at
+  [[http://ansys.net][ANSYS.net]].
 
-== Bugs and Problems ==
+** Bugs and Problems
 
 For an overview of deficiencies and outstanding issues please check
-the beginning of the TODO file.
+the beginning of the [[file:TODO][TODO]] file.
 
 The `user variable' highlighting is still experimental, newly edited
 variable definitions are taken into account only when the variable
@@ -422,27 +424,27 @@ highlighting (when the mentioned flag above is not set) are somewhat
 brittle, please use "M-o M-o" to update the fontification in case the
 format line and all variables are not highlighted correctly.
 
-=== Getting help ===
+*** Getting help
 
 If you experience problems installing or running this mode you have
 the following options:
 
-* Write an email to the mode maintainer (you can trigger a bug report
+- Write an email to the mode maintainer (you can trigger a bug report
   from the menu or directly calling the function
   `ansys-submit-bug-report'.  Even when you are not in the position of
   sending emails from Emacs this will give at least a useful mail
   template with valuable information about internal mode settings).
 
-* When you have already a (cost free) Google account you are able
-  to issue a bug report at the [http://code.google.com/p/ansys-mode/issues/list Google Code site].
-  From this site you can download the latest development version.
+- When you have already a (cost free) Github account you are able to
+  issue a bug report at the [[https://github.com/dieter-wilhelm/ansys-mode/issues][Github issues list]].  From this site you
+  can download the latest development version.
 
-* It might be interesting for you to visit the
-[http://www.emacswiki.org/cgi-bin/wiki/AnsysMode Emacs Wiki].
-At the Wiki you can add some comments or wishes without registration.
+- It might be interesting for you to visit the [[http://www.emacswiki.org/cgi-bin/wiki/AnsysMode][Emacs Wiki]].  At the
+  Wiki you might add comments or wishes without registration.
 
-local variables:
-word-wrap: t
-show-trailing-whitespace: t
-indicate-empty-lines: t
-end:
+# local variables:
+# word-wrap: t
+# show-trailing-whitespace: t
+# indicate-empty-lines: t
+# mode: org
+# end:
